[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/props/proximity-fade/proximity-fade.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="ProximityFade" type="Node2D"]
script = ExtResource( 1 )

[node name="FadingObjects" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="FadingObjects"]

[node name="Text" type="Label" parent="FadingObjects"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartingPositionMarker" type="Position2D" parent="."]

[node name="ObjectDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectDetector"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
